# oop_labs

./: CMakeLists.txt
.devcontainer/: Dockerfile
include/: remove_vowels.h
lab1/: main.cpp
lab1/src/: remove_vowels.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: Binary.h
lab2/src/: Binary.cpp
lab2/test/: Binary_tests.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: Array.h  Figure.h  Rectangle.h  Rhombus.h  Trapezoid.h
lab3/src/: Array.cpp  Rectangle.cpp  Rhombus.cpp  Trapezoid.cpp
lab3/test/: Tests.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: Array.h  Figure.h  Point.h  Rectangle.h  Rhombus.h  Trapezoid.h
lab4/test/: Tests.cpp
lab5/: CMakeLists.txt  main.cpp
lab5/include/: FixedBlockMemoryResource.h  Stack.h
lab5/test/: Tests.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/include/: NPC.h  bear.h  factory.h  knight.h  logger.h
lab6/src/: NPC.cpp  bear.cpp  factory.cpp  knight.cpp  orc.cpp
lab6/test/: Tests.cpp
lab7/: main.cpp
lab7/include/: EventManager.h  NPC.h  factory.h  ork.h  visitor.h
lab7/src/: EventManager.cpp  NPC.cpp  factory.cpp  logger.cpp  visitor.cpp
test/: remove_vowels_tests.cpp
