cmake_minimum_required(VERSION 3.10)
project(lab5)

# ????????????? ???????? C++
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# ?????????????? ????? ??????????
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror=maybe-uninitialized")

# ?????????? GoogleTest
include(FetchContent)
FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG v1.15.2
  TLS_VERIFY false
)
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

# ????????? include ????
include_directories(include)

# ?????? ??????????
set(SRC_FILES
    src/visitor.cpp
    src/factory.cpp
    src/logger.cpp
    src/NPC.cpp
    src/orc.cpp
    src/knight.cpp
    src/bear.cpp
    src/EventManager.cpp
)

# ???????? ???????????? ????? ? ????????? SRC_FILES
add_executable(${CMAKE_PROJECT_NAME}_exe main.cpp ${SRC_FILES})

# ???????? ??????
add_executable(tests test/Tests.cpp ${SRC_FILES})

# ???????? GoogleTest
target_link_libraries(tests gtest_main)

# ???????? ????????? ??????
enable_testing()
add_test(NAME MyProjectTests COMMAND tests)
